--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ _build_html
 beehive.*
 static/icons-sprite.png
 static/icons-large-sprite.png
+static/icons-shuffle-sprite.png
 static/icons/*.png
 static/pixel_icons/*.png
 *.csv
@@ -30,3 +31,6 @@ static/pixel_icons/*.png
 !contrib/supervisord/install-reinstall.sh
 !static/data/*
 !static/icons/hsl*.png
+
+.DS_Store
+
